# truffle-rs

./: Cargo.toml  Dockerfile  docker-compose.yml
migrations/2022-04-18-021312_truffle/: down.sql  up.sql
src/: bft.rs  lib.rs  main.rs  models.rs  schema.rs
templates/: bft.html.tera  index.html.tera
